ADD - More translations

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -202,6 +202,17 @@
   "pause": "Pausieren",
   "paused": "Pausiert",
   "pending": "Ausstehend",
+  "noTorrentsSelected": "Keine Torrents ausgewählt",
+  "noTorrentsCanBePaused": "Keine Torrents können pausiert werden",
+  "noTorrentsCanBeResumed": "Keine Torrents können fortgesetzt werden",
+  "failedToReadTorrentFile": "Torrent-Datei konnte nicht gelesen werden. Bitte versuchen Sie, die Datei erneut auszuwählen.",
+  "pleaseSelectValidTorrentFile": "Bitte wählen Sie eine gültige Torrent-Datei aus",
+  "torrentFilePreselected": "Torrent-Datei aus der Dateien-App vorausgewählt",
+  "torrentFileDetected": "Torrent-Datei erkannt und vorausgewählt",
+  "failedToSwitchServer": "Server-Wechsel fehlgeschlagen",
+  "allApiCallsFailed": "Alle API-Aufrufe fehlgeschlagen",
+  "unableToLoadStatisticsData": "Alle API-Aufrufe fehlgeschlagen - keine Statistiken können geladen werden",
+  "pleaseCheckInternetConnection": "Bitte überprüfen Sie Ihre Internetverbindung und versuchen Sie es erneut.",
   "pausedTorrents": "Pausierte Torrents",
   "peakDownloadSpeed": "Höchste Download-Geschwindigkeit",
   "peakUploadSpeed": "Höchste Upload-Geschwindigkeit",
