--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -202,6 +202,17 @@
   "pause": "Pause",
   "paused": "Paused",
   "pending": "Pending",
+  "noTorrentsSelected": "No torrents selected",
+  "noTorrentsCanBePaused": "No torrents can be paused",
+  "noTorrentsCanBeResumed": "No torrents can be resumed",
+  "failedToReadTorrentFile": "Failed to read torrent file. Please try selecting the file again.",
+  "pleaseSelectValidTorrentFile": "Please select a valid torrent file",
+  "torrentFilePreselected": "Torrent file pre-selected from Files app",
+  "torrentFileDetected": "Torrent file detected and pre-selected",
+  "failedToSwitchServer": "Failed to switch server",
+  "allApiCallsFailed": "All API calls failed",
+  "unableToLoadStatisticsData": "All API calls failed - unable to load any statistics data",
+  "pleaseCheckInternetConnection": "Please check your internet connection and try again.",
   "pausedTorrents": "Paused Torrents",
   "peakDownloadSpeed": "Peak Download Speed",
   "peakUploadSpeed": "Peak Upload Speed",
