--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -202,6 +202,17 @@
   "pause": "Pausar",
   "paused": "Pausado",
   "pending": "Pendiente",
+  "noTorrentsSelected": "No hay torrents seleccionados",
+  "noTorrentsCanBePaused": "No hay torrents que puedan ser pausados",
+  "noTorrentsCanBeResumed": "No hay torrents que puedan ser reanudados",
+  "failedToReadTorrentFile": "Error al leer el archivo torrent. Por favor, inténtalo seleccionando el archivo de nuevo.",
+  "pleaseSelectValidTorrentFile": "Por favor selecciona un archivo torrent válido",
+  "torrentFilePreselected": "Archivo torrent preseleccionado desde la app de Archivos",
+  "torrentFileDetected": "Archivo torrent detectado y preseleccionado",
+  "failedToSwitchServer": "Error al cambiar de servidor",
+  "allApiCallsFailed": "Todas las llamadas API fallaron",
+  "unableToLoadStatisticsData": "Todas las llamadas API fallaron - no se pudieron cargar datos de estadísticas",
+  "pleaseCheckInternetConnection": "Por favor verifica tu conexión a internet e inténtalo de nuevo.",
   "pausedTorrents": "Torrents Pausados",
   "peakDownloadSpeed": "Velocidad Máxima de Descarga",
   "peakUploadSpeed": "Velocidad Máxima de Subida",
