--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -202,6 +202,17 @@
   "pause": "Pause",
   "paused": "En pause",
   "pending": "En attente",
+  "noTorrentsSelected": "Aucun torrent sélectionné",
+  "noTorrentsCanBePaused": "Aucun torrent ne peut être mis en pause",
+  "noTorrentsCanBeResumed": "Aucun torrent ne peut être repris",
+  "failedToReadTorrentFile": "Échec de la lecture du fichier torrent. Veuillez réessayer en sélectionnant le fichier à nouveau.",
+  "pleaseSelectValidTorrentFile": "Veuillez sélectionner un fichier torrent valide",
+  "torrentFilePreselected": "Fichier torrent présélectionné depuis l'app Fichiers",
+  "torrentFileDetected": "Fichier torrent détecté et présélectionné",
+  "failedToSwitchServer": "Échec du changement de serveur",
+  "allApiCallsFailed": "Tous les appels API ont échoué",
+  "unableToLoadStatisticsData": "Tous les appels API ont échoué - impossible de charger les données de statistiques",
+  "pleaseCheckInternetConnection": "Veuillez vérifier votre connexion internet et réessayer.",
   "pausedTorrents": "Torrents en Pause",
   "peakDownloadSpeed": "Vitesse de Pointe de Téléchargement",
   "peakUploadSpeed": "Vitesse de Pointe de Téléversement",
